--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -167,3 +167,8 @@ html.dark .upload-field .text-white {
 .upload-field .text-white {
   color: #000 !important;
 }
+
+a,
+button {
+  cursor: pointer;
+}
